# work4me

./: .gitignore  CLAUDE.md  README.md  diagnostic-commands.txt  pyproject.toml  results.txt
docs/: 00-overview.md  01-stack-recommendation.md  02-wayland-platform.md  03-architecture.md  04-claude-code-integration.md  05-browser-automation.md  06-terminal-editor-control.md  07-behavior-model.md  08-task-scheduling.md  09-risk-analysis.md  10-implementation-roadmap.md  11-distribution.md  12-prior-art.md
docs/plans/: 2026-02-21-architecture-validation-design.md  2026-02-21-implementation-plan.md
tests/: test_activity_monitor.py  test_browser_controller.py  test_browser_mouse.py  test_captcha.py  test_claude_code.py  test_cli.py  test_config.py  test_crash_recovery.py  test_doctor.py  test_engine_monitor_wiring.py  test_input_sim.py  test_integration.py  test_micro_pause.py  test_mouse.py  test_orchestrator.py  test_scheduler.py  test_state.py  test_task_planner.py  test_vscode_controller.py  test_window_mgr.py
vscode-extension/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vscode-extension
vscode-extension/src/: extension.ts
work4me/: __init__.py  __main__.py  cli.py  config.py  doctor.py
work4me/behavior/: activity_monitor.py  engine.py  mouse.py  typing.py
work4me/controllers/: browser.py  browser_mouse.py  captcha.py  claude_code.py  editor.py  terminal.py  vscode.py
work4me/core/: events.py  orchestrator.py  state.py
work4me/desktop/: input_sim.py  window_mgr.py
work4me/planning/: scheduler.py  task_planner.py
(+2 files in other folders)
